tests/snapshots/mcp_scenarios__artifact-pom-descriptor.snap
---
source: tests/mcp_scenarios.rs
assertion_line: 102
expression: execution.response
---
{
  "coordinate": "org.example:demo:1.0",
  "descriptor": {
    "artifact_id": "demo",
    "bom_imports": [],
    "coordinate": "org.example:demo:1.0",
    "dependencies": [
      {
        "artifact_id": "helper",
        "exclusions": [],
        "group_id": "org.example",
        "optional": false,
        "scope": "runtime",
        "version": "${helper.version}"
      }
    ],
    "dependency_management": [],
    "group_id": "org.example",
    "packaging": "jar",
    "properties": {
      "java.version": "21"
    },
    "version": "1.0"
  },
  "found": true
}
