tests/snapshots/mcp_scenarios__artifact-versions-scoped.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "org.libs:helper": [
    "2.0"
  ]
}
