tests/snapshots/mcp_scenarios__artifact-versions.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "org.example:demo": [
    "1.0",
    "2.0"
  ]
}
