tests/snapshots/mcp_scenarios__class-declaration-source.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "ambiguous_candidates": [],
  "results": [
    {
      "class_name": "org.example.Foo",
      "end_line": 1,
      "entry": "org/example/Foo.java",
      "kind": "class",
      "name": "org.example.Foo",
      "source": "package org.example; public class Foo { int version = 2; }",
      "source_jar": {
        "artifact_id": "demo",
        "class_count": 0,
        "classifier": "sources",
        "coordinate": "org.example:demo:2.0:sources",
        "entry_count": 1,
        "group_id": "org.example",
        "path": "org/example/demo/2.0/demo-2.0-sources.jar",
        "version": "2.0"
      },
      "start_line": 1,
      "truncated": false
    }
  ]
}
