tests/snapshots/mcp_scenarios__class-search-case-insensitive-limit.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "class_name": "org.example.Foo",
      "jar": {
        "artifact_id": "demo",
        "class_count": 2,
        "coordinate": "org.example:demo:1.0",
        "entry_count": 6,
        "group_id": "org.example",
        "path": "org/example/demo/1.0/demo-1.0.jar",
        "version": "1.0"
      }
    }
  ]
}
