tests/snapshots/mcp_scenarios__exact-service-entry.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "content_kind": "text",
      "entry": "META-INF/services/example.Service",
      "jar": {
        "artifact_id": "demo",
        "class_count": 2,
        "coordinate": "org.example:demo:1.0",
        "entry_count": 6,
        "group_id": "org.example",
        "path": "org/example/demo/1.0/demo-1.0.jar",
        "version": "1.0"
      },
      "original_size": 15,
      "text": "org.example.Foo",
      "truncated": false
    }
  ]
}
